[tool.poetry]
name = "astroriver-bff"
version = "0.1.0"
description = "The backend-for-frontend for the astroriver interface"
authors = ["Evan Thomas <evan.thomas@epfl.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
pydantic-settings = "^2.0.3"
httpx = "^0.27.0"
python-keycloak = "^3.7.0"
fastapi-keycloak = "^1.0.10"
sqlmodel-react-admin = "^0.0.6"
sqlmodel = "^0.0.16"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
